typescript/checker/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName37.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            32,
        ),
        hi: BytePos(
            38,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName37.ts:3:6
  |
3 |     [public]: 0
  |      ^^^^^^

